db method built

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (25, 'food but with py again this time')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (27, 'food but with py again this time')]\n"
      ]
     }
    ],
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (25, 'food but with py again this time'), (26, 'unique code which will be in table')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (27, 'food but with py again this time'), (28, 'unique code which will be in table')]\n"
      ]
     }
    ],
@@ -192,20 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (25, 'food but with py again this time')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (27, 'food but with py again this time')]\n"
      ]
     }
    ],
    "source": [
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
-    "category_id = \"26\"; category_name = 'unique code which will be in table'\n",
+    "category_id = \"28\"; category_name = 'unique code which will be in table'\n",
     "cursor.execute(\"\"\"DELETE FROM \"Categories\" WHERE category_id = \"\"\" + category_id)# + \"\"\" OR category = \"\"\" + category_name)# type: ignore #, (category_id, category_name))\n",
     "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
@@ -223,23 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InFailedSqlTransaction",
-     "evalue": "current transaction is aborted, commands ignored until end of transaction block\n",
+     "ename": "UndefinedColumn",
+     "evalue": "column \"catid\" does not exist\nLINE 1: ...gory_Tree\" (category_id, sub_category_id) values (\"catid\", \"...\n                                                             ^\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mselect * from \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategory_Tree\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m c\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124minsert into \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategory_Tree\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m (category_id, sub_category_id) values (\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcatid\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubcatid\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n",
-      "\u001b[1;31mInFailedSqlTransaction\u001b[0m: current transaction is aborted, commands ignored until end of transaction block\n"
+      "\u001b[1;31mUndefinedColumn\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[62], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategory_Tree\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m ct\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43minsert into \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategory_Tree\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m (category_id, sub_category_id) values (\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcatid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msubcatid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m)\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n",
+      "\u001b[1;31mUndefinedColumn\u001b[0m: column \"catid\" does not exist\nLINE 1: ...gory_Tree\" (category_id, sub_category_id) values (\"catid\", \"...\n                                                             ^\n"
      ]
     }
    ],
    "source": [
-    "cursor.execute(\"\"\"select * from \"Category_Tree\" c\"\"\")\n",
+    "cursor.execute(\"\"\"select * from \"Category_Tree\" ct\"\"\")\n",
     "cursor.execute(\"\"\"insert into \"Category_Tree\" (category_id, sub_category_id) values (\"catid\", \"subcatid\")\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
