--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -223,33 +223,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefinedColumn",
-     "evalue": "column \"catid\" does not exist\nLINE 1: ...gory_Tree\" (category_id, sub_category_id) values (\"catid\", \"...\n                                                             ^\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUndefinedColumn\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[62], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategory_Tree\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m ct\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43minsert into \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategory_Tree\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m (category_id, sub_category_id) values (\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcatid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msubcatid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m)\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n",
-      "\u001b[1;31mUndefinedColumn\u001b[0m: column \"catid\" does not exist\nLINE 1: ...gory_Tree\" (category_id, sub_category_id) values (\"catid\", \"...\n                                                             ^\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cursor.execute(\"\"\"select * from \"Category_Tree\" ct\"\"\")\n",
-    "cursor.execute(\"\"\"insert into \"Category_Tree\" (category_id, sub_category_id) values (\"catid\", \"subcatid\")\"\"\")\n",
+    "# cursor.execute(\"\"\"select * from \"Category_Tree\" ct\"\"\")\n",
+    "# cursor.execute(\"\"\"insert into \"Category_Tree\" (category_id, sub_category_id) values (\"catid\", \"subcatid\")\"\"\")\n",
     "\n",
-    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
-    "print(cursor.fetchall())"
+    "# cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "# print(cursor.fetchall())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    this would work to pass a string, but Category_Tree's category & sub category parameters both take integers, so lets get encoding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "    & the final step is to use this to commit our data to the DB"
    ]
   },
