--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -238,15 +238,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    this would work to pass a string, but Category_Tree's category & sub category parameters both take integers, so lets get encoding\n"
+    "    this would work to pass a string, but Category_Tree's category & sub category parameters both take integers, so lets get encoding\n",
+    "\n",
+    "    First lets pass an old data set from pdf processing, the following cell is recycled code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser     Category             SubCategory            SubSubCategory  \\\n",
+      "0        1  Agriculture                     NaN                       NaN   \n",
+      "1        2          NaN  Agricultural Equipment                       NaN   \n",
+      "2        3          NaN                     NaN  Agricultural Greenhouses   \n",
+      "3        4          NaN                     NaN     Aquaculture Equipment   \n",
+      "4        5          NaN                     NaN                       NaN   \n",
+      "...    ...          ...                     ...                       ...   \n",
+      "4591  4592          NaN                     NaN            Truck Steering   \n",
+      "4592  4593          NaN                     NaN          Truck Suspension   \n",
+      "4593  4594          NaN                     NaN                Truck Tire   \n",
+      "4594  4595          NaN                     NaN        Truck Transmission   \n",
+      "4595  4596          NaN                     NaN               Truck Wheel   \n",
+      "\n",
+      "     SubSubSubCategory  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2                  NaN  \n",
+      "3                  NaN  \n",
+      "4     Aquaculture Trap  \n",
+      "...                ...  \n",
+      "4591               NaN  \n",
+      "4592               NaN  \n",
+      "4593               NaN  \n",
+      "4594               NaN  \n",
+      "4595               NaN  \n",
+      "\n",
+      "[4596 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.read_excel('document.xlsx')\n",
+    "midpoint = len(df1) // 2\n",
+    "df2a = df1.iloc[:midpoint].reset_index(drop=True)\n",
+    "df2b = df1.iloc[midpoint:].reset_index(drop=True)\n",
+    "df2b = df2b.drop(['Category', 'SubCategory'], axis=1) # drop na collumns\n",
+    "df2b = df2b.iloc[1:] # remove unneccesary row with innacurate names\n",
+    "df2b.columns = ['SubSubCategory', 'SubSubSubCategory']\n",
+    "df2a = df2a.drop(['Unnamed: 3'], axis=1) # drop\n",
+    "df2b['Ser'] = range(1, len(df2b) + 1)\n",
+    "df3 = pd.merge(df2a, df2b, on='Ser', suffixes=('_a', '_b'))\n",
+    "\n",
+    "print(df3)"
+   ]
   },
   {
    "cell_type": "markdown",
