encoded everything into the map

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -301,6 +301,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    Now lets try making a map from this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser                  combined\n",
+      "0        1               Agriculture\n",
+      "1        2    Agricultural Equipment\n",
+      "2        3  Agricultural Greenhouses\n",
+      "3        4     Aquaculture Equipment\n",
+      "4        5          Aquaculture Trap\n",
+      "...    ...                       ...\n",
+      "4591  4592            Truck Steering\n",
+      "4592  4593          Truck Suspension\n",
+      "4593  4594                Truck Tire\n",
+      "4594  4595        Truck Transmission\n",
+      "4595  4596               Truck Wheel\n",
+      "\n",
+      "[4596 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(df3)\n",
+    "\n",
+    "def combine_non_na(row):\n",
+    "    return ' '.join([str(val) for val in row if val != 'na' and not isinstance(val, (int, float))])\n",
+    "\n",
+    "df['combined'] = df.apply(combine_non_na, axis=1)\n",
+    "\n",
+    "df = df[['Ser', 'combined']]\n",
+    "\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "    & the final step is to use this to commit our data to the DB"
    ]
