--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -284,14 +284,14 @@
    ],
    "source": [
     "df1 = pd.read_excel('document.xlsx')\n",
-    "midpoint = len(df1) // 2\n",
+    "midpoint = len(df1) // 2 # type: ignore\n",
     "df2a = df1.iloc[:midpoint].reset_index(drop=True)\n",
     "df2b = df1.iloc[midpoint:].reset_index(drop=True)\n",
     "df2b = df2b.drop(['Category', 'SubCategory'], axis=1) # drop na collumns\n",
     "df2b = df2b.iloc[1:] # remove unneccesary row with innacurate names\n",
     "df2b.columns = ['SubSubCategory', 'SubSubSubCategory']\n",
     "df2a = df2a.drop(['Unnamed: 3'], axis=1) # drop\n",
-    "df2b['Ser'] = range(1, len(df2b) + 1)\n",
+    "df2b['Ser'] = range(1, len(df2b) + 1) # type: ignore\n",
     "df3 = pd.merge(df2a, df2b, on='Ser', suffixes=('_a', '_b'))\n",
     "\n",
     "print(df3)"
@@ -340,8 +340,23 @@
     "\n",
     "df = df[['Ser', 'combined']]\n",
     "\n",
-    "\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Lets save this for safe keeping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('map.xlsx', index=False)"
    ]
   },
   {
