--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -363,6 +363,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    Now its DB time, we need to put this map into 1 of our tables, & use the map for our other table\n",
+    "\n",
+    "    Lets start out by uploading the map we just made"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "    & the final step is to use this to commit our data to the DB"
    ]
