--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,43 @@
    "source": [
     "    Now its DB time, we need to put this map into 1 of our tables, & use the map for our other table\n",
     "\n",
-    "    Lets start out by uploading the map we just made"
+    "    Lets start out by uploading the map we just made\n",
+    "\n",
+    "    First lets make sure the db is empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999')]\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "syntax error at or near \"*\"\nLINE 1: delete * from \"Categories\" c\n               ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mSyntaxError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[80], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n\u001b[1;32m----> 4\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mdelete * from \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategories\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m c\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n",
+      "\u001b[1;31mSyntaxError\u001b[0m: syntax error at or near \"*\"\nLINE 1: delete * from \"Categories\" c\n               ^\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "print(cursor.fetchall())\n",
+    "\n",
+    "cursor.execute(\"\"\"delete * from \"Categories\" c\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "print(cursor.fetchall())"
    ]
   },
   {
@@ -373,7 +409,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# select * from \"Categories\" c;\n",
+    "# insert into \"Categories\" (category_id, category) values (22, 'food999');\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "cursor.execute(\"\"\"insert into \"Categories\" (category) values ('food but with py again this time')\"\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
