--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -381,32 +381,36 @@
      "text": [
       "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999')]\n"
      ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "syntax error at or near \"*\"\nLINE 1: delete * from \"Categories\" c\n               ^\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSyntaxError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n\u001b[1;32m----> 4\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mdelete * from \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategories\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m c\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(cursor\u001b[38;5;241m.\u001b[39mfetchall())\n",
-      "\u001b[1;31mSyntaxError\u001b[0m: syntax error at or near \"*\"\nLINE 1: delete * from \"Categories\" c\n               ^\n"
-     ]
     }
    ],
    "source": [
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
     "print(cursor.fetchall())\n",
     "\n",
-    "cursor.execute(\"\"\"delete * from \"Categories\" c\"\"\")\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "cursor.execute(\"\"\"insert into \"Categories\" (category) values ('food but with py again this time')\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
-    "print(cursor.fetchall())"
+    "cursor.execute(\"\"\"drop table \"Categories\" \"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "# cursor.execute(\"\"\"insert into \"Categories\" (category) values ('food but with py again this time')\"\"\")\n",
+    "\n",
+    "# cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "# print(cursor.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
